--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "breadcrumbs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://react-app-git-react-app.dte-ocp46-spr0m6-915b3b336cabec458a7c7ec2aa7c625f-0000.us-east.containers.appdomain.cloud",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
